--- a/Project 3/style.css
+++ b/Project 3/style.css
@@ -20,8 +20,23 @@ button {
     font-family: inherit;
     font-size: inherit;
     color: white;
-    background-color: aquamarine;
+    background-color: rgb(83, 228, 179);
     border: none;
     border-radius: 3px;
     padding: .5em 1em;
+    box-shadow: 0 0 5px gray;
+}
+
+#delete-btn {
+    color:rgb(83, 228, 179);
+    background-color: white;
+    border: 2px solid rgb(83, 228, 179);
+}
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    color:rgb(83, 228, 179);
 }
