--- a/Project 7 - Pacman/style.css
+++ b/Project 7 - Pacman/style.css
@@ -7,10 +7,58 @@ html, body {
     width: 420px;
     height: 420px;
     border: solid black;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .grid div {
     width: 15px;
     height: 15px;
+}
+
+.pac-dot {
+    background-color: green;
+    border: 5px solid white;
+    box-sizing: border-box;
+}
+
+.wall {
     background-color: blue;
+}
+
+.power-pellet {
+    background-color: green;
+    border-radius: 10px;
+}
+
+.pacman {
+    background-color: orange;
+    border-radius: 10px;
+    border: 1px solid black;
+    box-sizing: border-box;
+}
+
+.ghost {
+    border: 1px solid black;
+    box-sizing: border-box;
+}
+
+.blinky {
+    background-color: red;
+}
+
+.pinky {
+    background-color: pink;
+}
+
+.inky {
+    background-color: yellow;
+}
+
+.clyde {
+    background-color: greenyellow;
+}
+
+.scared {
+    background-color: aqua;
 }
