--- a/API/BlogSpace/style.css
+++ b/API/BlogSpace/style.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
-    padding: 0 1em;
 }
 
 main {
@@ -15,4 +14,34 @@ hr {
 
 hr:last-child {
     display: none;
+}
+
+h2:first-child {
+    margin-top: 4em;
+}
+
+nav {
+    position: fixed;
+    background-color: aliceblue;
+    width: 100%;
+    margin: 0;
+    display: flex;
+}
+
+ul {
+    width: 100%;
+    display: flex;
+    gap: 1em
+}
+
+li {
+    list-style-type: none;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+body {
+    margin-top: 0;
 }
