--- a/API/Game of War/style.css
+++ b/API/Game of War/style.css
@@ -1,3 +1,67 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Josefin Sans', sans-serif;
+    color: whitesmoke;
+    margin: 0;
+    background: url('img/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+button {
+    background-color: yellow;
+    font-family: inherit;
+    padding: .5em 1em;
+    font-weight: bold;
+    border-radius: 10px;
+    border: 2px solid black;
+    margin: 1em;
+    cursor: pointer;
+    width: fit-content;
+}
+
+button:active,
+button:hover {
+    background-color: orange;
+}
+
+h2 {
+    margin: 0 auto;
+}
+
+img {
+    margin: 1em;
+    max-width: 140px;
+}
+
+.placeholder {
+    border: 2px solid wheat;
+    width: 140px;
+    height: 195px;
+    margin: 1em;
+    border-radius: 10px;
+}
+
+#image-holder {
+    margin: 0 auto;
+}
+
 #draw-button {
-    display: none;
+    margin: 1em auto;
+}
+
+.blocked {
+    background-color: gray;
+}
+
+.blocked:hover,
+.blocked:active {
+    background-color: gray;
 }
