minor fixes, made it into an extension

--- a/API/Personal Dashboard/style.css
+++ b/API/Personal Dashboard/style.css
@@ -5,6 +5,7 @@
 body {
     margin: 0;
     font-family: 'Baloo 2', cursive;
+    font-size: 2em;
     color: whitesmoke;
     text-shadow: 0 0 5px #3a3a3a;
 
