--- a/API/Personal Dashboard/style.css
+++ b/API/Personal Dashboard/style.css
@@ -20,12 +20,15 @@ body {
     justify-content: space-between;
 }
 
+
+
 h1, h2, h3, h4, p {
     margin: 1em;
 }
 
 p {
     opacity: .85;
+    margin-bottom: 0;
 }
 
 .container {
