--- a/UI/Portfolio/style.css
+++ b/UI/Portfolio/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 /* Custom properties, colors */
 
 :root {
@@ -35,6 +36,7 @@
     }
 }
 
+
 /* General styles */
 
 body {
@@ -60,7 +62,9 @@ img {
     outline-offset: 3px;
 }
 
+
 /* Buttons */
+
 .btn {
     display: inline-block;
     padding: .5em 2.5em;
@@ -78,6 +82,7 @@ img {
 .btn:hover {
     transform: scale(1.125em);
 }
+
 
 /* Typography */
 
@@ -119,10 +124,101 @@ h3 { font-size: var(--fs-h3);}
     margin-bottom: 1em;
 }
 
+.section__subtitle--work {
+    color: var(--clr-accent);
+    font-weight: var(--fw-bold);
+    margin-bottom: 2em;
+}
+
+
 /* header */
 
-nav {
-    display: none;
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+}
+
+.logo {
+    /* max-width: 100px; */
+}
+
+.nav {
+    position: fixed;
+    background: var(--clr-dark);
+    color: var(--clr-light);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
+}
+
+.nav__list {
+    list-style: none;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.nav__link {
+    color: inherit;
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-h2);
+    text-decoration: none;
+}
+
+.nav__link:hover {
+    color: var(--clr-accent);
+}
+
+.nav-toggle {
+    padding: .5em;
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    z-index: 1000;
+}
+
+.hamburger {
+    display: block;
+    position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+    background: var(--clr-accent);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transform 250ms ease-in-out;
+}
+
+.hamburger::before,
+.hamburger::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+
+.hamburger::before {
+    top: 6px;
+}
+
+.hamburger::after {
+    bottom: 6px
 }
 
 /* Intro section */
@@ -168,6 +264,7 @@ nav {
         width: calc(100% + 1.5em);
     }
 }
+
 
 /* My services section */
 
@@ -217,6 +314,7 @@ nav {
     }
 }
 
+
 /* About me */
 
 .about-me {
@@ -256,6 +354,7 @@ nav {
     }
 }
 
+
 /* My work */
 
 .my-work {
@@ -284,3 +383,47 @@ nav {
     opacity: .5;
 }
 
+
+/* Footer */
+
+.footer {
+    background: #111;
+    color: var(--clr-accent);
+    text-align: center;
+    padding: 2.5em 0;
+    font-size: var(--fs-h3);
+}
+
+.footer a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.footer__link {
+    font-weight: var(--fw-bold);
+}
+
+.footer__link:hover,
+.social-list__link:hover {
+    opacity: .7;
+}
+
+.footer__link:hover {
+    text-decoration: underline;
+}
+
+.social-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 2em 0 0;
+    padding: 0;
+}
+
+.social-list__item {
+    margin: 0 .5em;
+}
+
+.social-list__link {
+    padding: .5em;
+}
