--- a/UI/Portfolio/style.css
+++ b/UI/Portfolio/style.css
@@ -39,6 +39,10 @@
 
 /* General styles */
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: var(--clr-light);
     color: var(--clr-dark);
@@ -188,6 +192,30 @@ header {
     right: 1em;
     top: 1em;
     z-index: 1000;
+}
+
+.nav-open .nav {
+    transform: translateX(0);
+}
+
+.nav-open .nav-toggle {
+    position: fixed;
+}
+
+.nav-open .hamburger {
+    transform: rotate(.625turn);
+}
+
+.nav-open .nav-toggle {
+    position: fixed;
+}
+
+.nav-open .hamburger::before {
+    transform: rotate(90deg) translateX(-6px);
+}
+
+.nav-open .hamburger::after {
+    opacity: 0;
 }
 
 .hamburger {
@@ -371,6 +399,11 @@ header {
 .portfolio__item {
     background: var(--clr-accent);
     overflow: hidden;
+}
+
+.portfolio__item:focus {
+    position: relative;
+    z-index: 2;
 }
 
 .portfolio__img {
