--- a/UI/Portfolio/style.css
+++ b/UI/Portfolio/style.css
@@ -460,3 +460,18 @@ header {
 .social-list__link {
     padding: .5em;
 }
+
+
+/* Individual items */
+
+.portfolio-item-individual {
+    padding: 0 2em 2em;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.portfolio-item-individual p {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
