--- a/React/other/src/style.css
+++ b/React/other/src/style.css
@@ -16,11 +16,20 @@ button {
     font-family: inherit;
     display: block;
     margin: 0 auto;
-    border: none;
+    border: 3px solid black;
     background-color: #00b800;
     padding: 10px 20px;
     text-transform: uppercase;
 }
+
+button:hover,
+button:active {
+    border: 3px solid white;
+}
+
+/* button:focus {
+    background-color: #006b00;
+} */
 
 h1 {
     font-size: 20px;
