--- a/React/bigger-projects/src/project1 - Photo store/assets/style.css
+++ b/React/bigger-projects/src/project1 - Photo store/assets/style.css
@@ -1,5 +1,5 @@
 :root {
-  --container-width: 500px;
+  --container-width: 550px;
 }
 
 * {
@@ -39,7 +39,7 @@ a {
 }
 
 .photos {
-  padding: 10px;
+  padding: 1em;
   display: grid;
   grid-gap: 2px;
   grid-auto-rows: 100px;
