--- a/React/bigger-projects/src/project1 - Photo store/assets/style.css
+++ b/React/bigger-projects/src/project1 - Photo store/assets/style.css
@@ -39,7 +39,7 @@ a {
 }
 
 .photos {
-  padding: 1em;
+  padding: 1em 0;
   display: grid;
   grid-gap: 2px;
   grid-auto-rows: 100px;
@@ -57,6 +57,7 @@ img.image-grid {
 
 img {
   border: 0px solid white;
+  border-radius: 5px;
   transition: .2s;
 }
 
