--- a/React/bigger-projects/src/project1 - Photo store/assets/style.css
+++ b/React/bigger-projects/src/project1 - Photo store/assets/style.css
@@ -7,21 +7,26 @@
 }
 
 body {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   margin: 0;
 }
 
 header {
   color: aliceblue;
-  background-color: #FE856A;
+  background-color: #fe856a;
   padding: 1em;
+}
+
+h1 {
+  width: 100%;
+  text-align: center;
 }
 
 .container {
   max-width: var(--container-width);
-  margin: 0 auto;
+  margin: auto;
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
 }
 
 .icon-container {
@@ -50,15 +55,16 @@ a {
 }
 
 img.image-grid {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 img {
   border: 0px solid white;
   border-radius: 5px;
-  transition: .2s;
+  transition: 0.2s;
+  width: 100%;
 }
 
 .image-container:hover img {
@@ -66,7 +72,7 @@ img {
 }
 
 .image-container {
-    position: relative;
+  position: relative;
 }
 
 .wide {
@@ -91,11 +97,57 @@ img {
 .image-container:hover .inside-image {
   bottom: 5px;
   right: 5px;
-  transition: .2s;
+  transition: 0.2s;
 }
 
 .inside-image > * {
   color: white;
-  margin: .2em;
+  margin: 0.2em;
   text-shadow: 0 0 5px black;
+}
+
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.cart-item img {
+  margin-right: auto;
+  margin-left: 10px;
+  max-width: 200px;
+}
+
+.cart-item p {
+  margin: 2em;
+}
+
+.total-text {
+  position: fixed;
+}
+
+.subcontainer {
+  margin: 1em;
+}
+
+button {
+  font-family: inherit;
+  border: 2px solid black;
+  border-radius: 5px;
+  background-color: #fe856a;
+  box-shadow: 0 0 10px gray;
+  padding: .25em 1em;
+}
+
+button:hover,
+button:active {
+  transform: scale(1.1);
+  transition: .25s;
+}
+
+button:disabled {
+  background-color: lightgray;
+  transform: scale(1);
+  border: 2px solid gray;
 }
