--- a/React/bigger-projects/src/project2 - Reusable React/style.css
+++ b/React/bigger-projects/src/project2 - Reusable React/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 1em;
 }
 
 .green {
@@ -26,4 +28,18 @@ body {
   letter-spacing: 1px;
   text-transform: uppercase;
   font-weight: 700;
+}
+
+.darkmode {
+  color: azure;
+  background-color: darkslategrey;
+}
+
+button {
+  font-family: inherit;
+  padding: .5em 1em;
+  margin: 1em;
+  border-radius: 5px;
+  background-color: inherit;
+  color: inherit;
 }
